--- a/pom.xml
+++ b/pom.xml
@@ -508,9 +508,9 @@
                 <db.script>mysql</db.script>
                 <jpa.database>MYSQL</jpa.database>
                 <jdbc.driverClassName>com.mysql.cj.jdbc.Driver</jdbc.driverClassName>
-                <jdbc.url>jdbc:mysql://localhost:3306/petclinic?useUnicode=true</jdbc.url>
-                <jdbc.username>petclinic</jdbc.username>
-                <jdbc.password>petclinic</jdbc.password>
+                <jdbc.url>jdbc:mysql://petclinic.c38tza3gzdnc.ap-south-1.rds.amazonaws.com:3306/petclinic?useUnicode=true</jdbc.url>
+                <jdbc.username>venkat</jdbc.username>
+                <jdbc.password>adminadmin</jdbc.password>
             </properties>
             <dependencies>
                 <dependency>
